--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,115 +1,163 @@
-<section class="text-left text-sm-start" id="home">
-	<div class="container">
-		<div class="d-sm-flex align-items-center justify-content-between">
-			<div>
-				<h1 class="landing-page">Take Healing To The<span class="text-color"> Next Level.</span></h1>
-				<p class="lead my-4 ">
-					Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start at under
-					SG$0.9/day. Monthly deliveries. Adjust anytime. 
+<div class="container">
+	<section class="text-left text-sm-start" id="home">
+		<div class="container">
+			<div class="d-sm-flex align-items-center justify-content-between">
+				<div>
+					<h1 class="landing-page">Take Healing To The<span class="text-color"> Next Level.</span></h1>
+					<p class="lead my-4 ">
+						Take our simple quiz to get a daily TCM pack tailored to your goals, lifestyle and diet. Packs start
+						at under
+						SG$0.9/day. Monthly deliveries. Adjust anytime.
+					</p>
+					<button type="button" class="btn btn-lg btn-landing" data-bs-toggle="modal" data-bs-target="">
+						<a href="/quiz/addQuiz">Start Quiz</a>
+					</button>
+				</div>
+				<img class="img-fluid d-none d-sm-block" src='img/landing-page.png' title='' />
+			</div>
+		</div>
+	</section>
+	
+	<!-- Section: What We Do -->
+	<section class="services">
+		<h1>What We Do</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisi magna. Morbi et diam ut sem tempor ornare.
+			Vestibulum vestibulum laoreet libero, non finibus ligula ullamcorper quis.</p>
+		<div class="row">
+			<div class="ser-col" style="background: #d4ebdc;">
+				<div style="padding: 4rem;">
+					<i class="fa-solid fa-child-reaching fa-10x"></i>
+				</div>
+				<h3>Know Yourself</h3>
+				<p>
+					Take a online accessment on your lifestyle, health and health goals
 				</p>
-				<button type="button" class="btn btn-lg btn-landing" data-bs-toggle="modal" data-bs-target="">
-					<a href="/quiz/addQuiz">Start Quiz</a>
-				</button>
 			</div>
-			<img class="img-fluid d-none d-sm-block" src='img/landing-page.png' title='' />
+			<div class="ser-col" style="background: #fadda6;">
+				<div style="padding: 4rem;">
+					<i class="fa-solid fa-capsules fa-10x"></i>
+				</div>
+				<h3>See Your Pack</h3>
+				<p>
+					Get a list of recommended TCM based on your online accessment
+				</p>
+			</div>
+			<div class="ser-col">
+				<div style="padding: 4rem;">
+					<i class="fa-solid fa-calendar fa-10x"></i>
+				</div>
+				<h3>Continue Monthly</h3>
+				<p>
+					Subscribe to our monthly deliveries. Adjust anytime.
+				</p>
+			</div>
 		</div>
-	</div>
-</section>
+	</section>
+	
+	<!-- Section: Our Sources -->
+	<section class="countries">
+		<h1>Our Sources</h1>
+		<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
+		<div class="row">
+			<div class="countries-col">
+				<img src="/img/thailand.jpg" alt="">
+				<div class="layer">
+					<h3>THAILAND</h3>
+				</div>
+			</div>
+			<div class="countries-col">
+				<img src="/img/japan.jpg" alt="">
+				<div class="layer">
+					<h3>JAPAN</h3>
+				</div>
+			</div>
+			<div class="countries-col">
+				<img src="/img/china.jpg" alt="">
+				<div class="layer">
+					<h3>CHINA</h3>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<!-- Section: Testimonials -->
+	<section class="testimonials">
+		<h1>What Our Customer Says</h1>
+		<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
+		<div class="row">
+			<div class="testimonial-col" style="background: #e0d1b5;">
+				<img src="/img/jungkook.jpg">
+				<div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
+						non neque nec eleifend.</p>
+					<h3>Lee Ming</h3>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-o"></i>
+					<!-- 4 stars -->
+				</div>
+			</div>
+			<div class="testimonial-col" style="background: #e0d1b5;">
+				<img src="/img/lando.jpg">
+				<div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
+						non neque nec eleifend.</p>
+					<h3>Carlando Morris</h3>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star"></i>
+					<i class="fa fa-star-half-o"></i>
+					<!-- 4 1/2 stars -->
+				</div>
+			</div>
+		</div>
+	</section>
+</div>
 
-<!-- Section: What We Do -->
-<section class="services">
-	<h1>What We Do</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et nisi magna. Morbi et diam ut sem tempor ornare.
-	Vestibulum vestibulum laoreet libero, non finibus ligula ullamcorper quis.</p>
-	<div class="row">
-		<div class="ser-col" style="background: #d4ebdc;">
-			<div style="padding: 4rem;">
-				<i class="fa-solid fa-child-reaching fa-10x"></i>
-			</div>
-			<h3>Know Yourself</h3>
-			<p>
-				Take a online accessment on your lifestyle, health and health goals
-			</p>
-		</div>
-		<div class="ser-col" style="background: #fadda6;">
-			<div style="padding: 4rem;">
-				<i class="fa-solid fa-capsules fa-10x"></i>
-			</div>
-			<h3>See Your Pack</h3>
-			<p>
-				Get a list of recommended TCM based on your online accessment
-			</p>
-		</div>
-		<div class="ser-col">
-			<div style="padding: 4rem;">
-				<i class="fa-solid fa-calendar fa-10x"></i>
-			</div>
-			<h3>Continue Monthly</h3>
-			<p>
-				Subscribe to our monthly deliveries. Adjust anytime.
-			</p>
-		</div>
-	</div>
-</section>
+<section class="section-subscribe padding-y-lg">
+	<div class="container">
 
-<!-- Section: Our Sources -->
-<section class="countries">
-	<h1>Our Sources</h1>
-	<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
-	<div class="row">
-		<div class="countries-col">
-			<img src="/img/thailand.jpg" alt="">
-			<div class="layer">
-				<h3>THAILAND</h3>
-			</div>
-		</div>
-		<div class="countries-col">
-			<img src="/img/japan.jpg" alt="">
-			<div class="layer">
-				<h3>JAPAN</h3>
-			</div>
-		</div>
-		<div class="countries-col">
-			<img src="/img/china.jpg" alt="">
-			<div class="layer">
-				<h3>CHINA</h3>
-			</div>
-		</div>
-	</div>
-</section>
+		<h3 class="text-center">
+			Get 20% off your first order now!
+		</h3>
 
-<!-- Section: Testimonials -->
-<section class="testimonials">
-	<h1>What Our Customer Says</h1>
-	<p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</p>
-	<div class="row">
-		<div class="testimonial-col" style="background: #e0d1b5;">
-			<img src="/img/jungkook.jpg">
-			<div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
-					non neque nec eleifend.</p>
-				<h3>Lee Ming</h3>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star-o"></i>
-				<!-- 4 stars -->
-			</div>
+		<p class="pb-2 text-center text-black">Delivering the latest product trends and industry news straight to your
+			inbox</p>
+
+		<div class="row justify-content-md-center">
+			<div class="col-lg-5>
+				<form class="form-row" method="post">
+					<div class="row">
+						<div class="col">
+							<input class="form-control border-0" placeholder="Your First Name" type="text" name="fname" required>
+						</div>
+						<div class="col">
+							<input class="form-control border-0" placeholder="Your Last Name" type="text" name="lname" required>
+						</div>
+					</div>
+					<br>
+					<div class="row">
+						<div class="col">
+							<input class="form-control border-0" placeholder="Your Email" type="email" name="email" required
+								pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+						</div> <!-- col.// -->
+					</div>
+					<div style="display: flex; align-items: center; justify-content: center;">
+						<button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
+							Subscribe </button>
+					</div> <!-- col.// -->
+					<small class="form-text">We’ll never share your email address with a third-party. </small>
+					<br>
+					{{!-- <div style="display: flex; align-items: center; justify-content: center;">
+						<button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
+							Subscribe </button>
+					</div> <!-- col.// --> --}}
+				</form>
+			</div> <!-- col-md-6.// -->
 		</div>
-		<div class="testimonial-col" style="background: #e0d1b5;">
-			<img src="/img/lando.jpg">
-			<div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc egestas velit lacus. Morbi fermentum
-					non neque nec eleifend.</p>
-				<h3>Carlando Morris</h3>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star"></i>
-				<i class="fa fa-star-half-o"></i>
-				<!-- 4 1/2 stars -->
-			</div>
-		</div>
+
 	</div>
 </section>
