--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -96,6 +96,7 @@
 
 		.section-subscribe {
 		background-color: #e0d1b5;
+		margin: 0%;
 		}
 	</style>
 
@@ -106,7 +107,7 @@
 
 	{{> _navbar }}
 
-	<div class="container">
+	<div>
 		{{> _flashmsg }}
 		{{{body}}}
 	</div>
