newsletter using SendGrid

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -125,37 +125,33 @@
 		</h3>
 
 		<p class="pb-2 text-center text-black">Delivering the latest product trends and industry news straight to your
-			inbox</p>
+			inbox</p> 
 
 		<div class="row justify-content-md-center">
-			<div class="col-lg-5>
+			<div class="col-lg-5">
 				<form class="form-row" method="post">
 					<div class="row">
 						<div class="col">
-							<input class="form-control border-0" placeholder="Your First Name" type="text" name="fname" required>
+							<input class="form-control border-0" placeholder="Your First Name" type="text" name="fname"
+								required>
 						</div>
 						<div class="col">
 							<input class="form-control border-0" placeholder="Your Last Name" type="text" name="lname" required>
 						</div>
 					</div>
-					<br>
+					<br><br><br>
 					<div class="row">
 						<div class="col">
 							<input class="form-control border-0" placeholder="Your Email" type="email" name="email" required
 								pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
 						</div> <!-- col.// -->
 					</div>
-					<div style="display: flex; align-items: center; justify-content: center;">
+					<div class="col-md-4 col-5" style="display: flex; align-items: center; justify-content: center;">
 						<button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
 							Subscribe </button>
 					</div> <!-- col.// -->
-					<small class="form-text">We’ll never share your email address with a third-party. </small>
-					<br>
-					{{!-- <div style="display: flex; align-items: center; justify-content: center;">
-						<button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
-							Subscribe </button>
-					</div> <!-- col.// --> --}}
 				</form>
+				<small class="form-text">We’ll never share your email address with a third-party. </small>
 			</div> <!-- col-md-6.// -->
 		</div>
 
