--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -101,6 +101,12 @@
                     </div>
                 </div>
             </li>
+                        <li class="nav-item">
+                <a class="nav-link" href="/voucher/listVoucher">
+                    <i class="fa-solid fa-ticket"></i>
+                    <span>Voucher</span></a>
+            </li>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider">
