--- a/views/staff/listStaff.handlebars
+++ b/views/staff/listStaff.handlebars
@@ -71,7 +71,8 @@
             </div>
 
             {{else}}
-            <h3>No Staff</h3>
+                    <h3 class="m-0 font-weight-bold" style="padding-left:20px ;">No Staff <a href="/staff/register" class="card-link mb-2" style="color:#8BAD97; padding-right:20px ; float:right;"><i class="fa-solid fa-user-plus"></i>  Add Staff</a></h6> <hr>
+
             {{/if}}
     </body>
     <script>
