Revert "Merge branch 'main' of https://github.com/ilovemyself26/TheHealingInc"
This reverts commit b2ee149441751d9c78d14b4d9dfb4c82c1df2183, reversing
changes made to e8fd1aabe44a47e8025ad0482cfebf81c3e5190e.

--- a/views/voucher/listVoucher.handlebars
+++ b/views/voucher/listVoucher.handlebars
@@ -59,7 +59,7 @@
         </div>
 
         {{else}}
-        <h3 class="m-0 font-weight-bold" style="padding-left:20px ;">No Voucher <a href="/voucher/addVoucher" class="card-link mb-2" style="color:#8BAD97;padding-right:20px ; float:right;"><i class="fa-solid fa-ticket"></i> Add Voucher</a></h6> <hr>
+        <h3 class="m-0 font-weight-bold" style="padding-left:20px ;">No Vouchers <hr><a href="/voucher/addVoucher" class="card-link mb-2" style="color:#8BAD97;"><i class="fa-solid fa-ticket"></i> Add Voucher</a></h6>
                             
 
     </div>
