newsletter susbcription ui + popup

--- a/views/newsletter/addSubscriber.handlebars
+++ b/views/newsletter/addSubscriber.handlebars
@@ -27,7 +27,7 @@
                     src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Twilio-logo-red.svg" alt="Twilio logo">
             </div>
             <div style="display: table-cell;" class="form-container">
-                <form action="/signup" id="contact-form" method="post" style="margin: 10%; margin-left:5%; width: 350px;">
+                <form action="/subscription/addSub" id="contact-form" method="post" style="margin: 10%; margin-left:5%; width: 350px;">
                     <div class="form-group">
                         <label for="firstname">First Name</label>
                         <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name" required>
