--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -90,13 +90,27 @@
 		border-radius: 60px;
 		width: 200px;
 		height: calc(1.5em + .9rem + 2px);
-		left: 100px;
-		top: 564px;
+		margin: auto;
+		display: block;
+		}
+
+		.btn-subscribe-popup{
+		color: #000000;
+		background: #e0d1b5;
+		border-radius: 60px;
+		width: 200px;
+		height: calc(1.5em + .9rem + 2px);
+		margin: auto;
+		display: block;
 		}
 
 		.section-subscribe {
 		background-color: #e0d1b5;
-		margin: 0%;
+		}
+
+		.section-subscribe form {
+		margin: auto;
+		display: block;
 		}
 	</style>
 
