newsletter changed frm full sg api to just using it to send mail

--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -129,7 +129,7 @@
 
 		<div class="row justify-content-md-center">
 			<div class="col-lg-5 col-md-6">
-				<form method="post">
+				<form method="post" action="/subscription/addSub">
 					<div class="row form">
 						<div class="col">
 							<input class="form-control border-0" placeholder="Your First Name" type="firstName" name="firstName" required>
@@ -165,7 +165,7 @@
 		<div class="newsletter-content" id="phplistsubscriberesult">
 			<h1>Get 20% Off Your First Order Now!</h1>
 			<p>Delivering the latest product trends and industry news straight to your inbox</p>
-			<form class="signup-form" id="signup-form" action="/subscription/addSub">
+			<form class="signup-form" id="signup-form" action="/">
 				<div class="row">
 					<div class="col">
 						<input class="form-control border-0" placeholder="Your First Name" type="firstName"
