--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -133,8 +133,7 @@
                 <div id="collapseNewsletter" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Function:</h6>
-                        <a class="collapse-item" href="/">Create Newsletter</a>
-                        <a class="collapse-item" href="/">View Past Newsletters</a>
+                        <a class="collapse-item" href="/subscription/retrieveNewsletter">Create Newsletter</a>
                     </div>
                 </div>
             </li>
