--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -129,8 +129,8 @@
 
 		<div class="row justify-content-md-center">
 			<div class="col-lg-5 col-md-6">
-				<form method="post" action="/subscription/addSub">
-					<div class="row form">
+				<form class="form-row" method="post">
+					<div class="row">
 						<div class="col">
 							<input class="form-control border-0" placeholder="Your First Name" type="firstName" name="firstName" required>
 						</div> <!-- col.// -->
@@ -139,498 +139,20 @@
 							<input class="form-control border-0" placeholder="Your Last Name" type="lastName" name="lastName" required>
 						</div> <!-- col.// -->
 					</div>
-					<br>
+					<br><br>
 					<div class="row">
-						<div class="col">
+						<div class="col-md-8 col-7">
 							<input class="form-control border-0" placeholder="Your Email" type="email" name="email" required
 								pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
 						</div> <!-- col.// -->
+						<div class="col-md-4 col-5">
+							<button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
+								Subscribe </button>
+						</div> <!-- col.// -->
 					</div>
-					<small class="form-text">We’ll never share your email address with a third-party. </small>
-					<br>
-					<div>
-						<button type="submit" class="btn btn-block btn-subscribe"> <i class="fa fa-envelope"></i>
-							Subscribe </button>
-					</div> <!-- col.// -->
 				</form>
+				<small class="form-text">We’ll never share your email address with a third-party. </small>
 			</div> <!-- col-md-6.// -->
 		</div>
 	</div>
 </section>
-
-{{!-- pop-up --}}
-<div id="news-signup">
-	<div class="wrapper">
-		<div id="news-signup_close"></div>
-		<div class="newsletter-content" id="phplistsubscriberesult">
-			<h1>Get 20% Off Your First Order Now!</h1>
-			<p>Delivering the latest product trends and industry news straight to your inbox</p>
-			<form class="signup-form" id="signup-form" action="/">
-				<div class="row">
-					<div class="col">
-						<input class="form-control border-0" placeholder="Your First Name" type="firstName"
-							name="firstName" required>
-					</div> <!-- col.// -->
-					<br><br>
-					<div class="col">
-						<input class="form-control border-0" placeholder="Your Last Name" type="lastName"
-							name="lastName" required>
-					</div> <!-- col.// -->
-				</div>
-				<br>
-				<div class="row">
-					<div class="col">
-						<input class="form-control border-0" placeholder="Your Email" type="email" name="email" required
-							pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-					</div> <!-- col.// -->
-				</div>
-				<br>
-				<div>
-					<button type="submit" class="btn btn-block btn-subscribe-popup"> <i class="fa fa-envelope"></i>
-						Subscribe </button>
-				</div> <!-- col.// -->
-				{{!-- <p>
-					<input type="text" name="email" id="news_signup_email" value="" autofocus>
-				</p>
-				<p class="button">
-					<input type="submit" value="Subscribe">
-				</p> --}}
-			</form>
-			<br>
-			<p class="footnote">We'll never share your email address with a third-party.</p>
-		</div>
-	</div>
-</div>
-
-<style>
-          form {
-              display: inline-block;
-              margin-bottom: 31px
-          }
-
-          #news-signup{
-              position: fixed;
-              width: 100%;
-              visibility: hidden;
-              z-index: 10002;
-              top: 100px;
-              opacity: 0;
-              -webkit-transform: scale(0.5);
-              transform: scale(0.5);
-              -webkit-transition: -webkit-transform 0.2s, opacity 0.2s, visibility 0s 0.2s;
-              transition: transform 0.2s, opacity 0.2s, visibility 0s 0.2s;
-          }
-
-          #news-signup .wrapper {
-            border-radius: 10px;
-            background: #8BAD97; 
-            position: relative;
-            margin: 0 auto;
-            text-align: center;
-            -moz-border-radius: 3px;
-            box-shadow: 0px 1px 10px rgba(0,0,0,0.5);
-            width: 98%
-          }
-
-          #news-signup_bg {
-               visibility: hidden;
-               position: fixed;
-               top: 0;
-               left: 0;
-               width: 100%;
-               height: 100%;
-               background-color: #ffffff;
-               opacity: 0.4;
-               z-index: 10001;
-           }
-           
-          #news-signup_close {
-              position: absolute;
-              left: 100%;
-              margin: 7px 0 0 -30px;
-              width: 20px;
-              height: 20px;
-              color: #fff;
-              opacity:0.3;
-              cursor: pointer;
-          }
-
-          #news-signup_close::before {
-              content: "×";
-              font: 400 26px/1em 'Roboto Slab', serif;
-          }
-
-          #news-signup_close:hover {
-              opacity:0.8;
-          }
-
-          #news-signup .newsletter-content {
-              padding: 100px 3px;
-              margin: 0 auto
-          }
-
-          #news-signup .newsletter-content h1 {
-              color: rgb(0, 0, 0);
-              text-align: center;
-              margin: 0 auto 15px
-          }
-
-          #news-signup .newsletter-content p {
-              margin: 0 auto 25px;
-              color: #ffffff
-          }
-          
-          #news-signup .newsletter-content form {
-              margin: 0;
-              padding: 0;
-              width: 90%;
-          }
-
-          #news-signup .newsletter-content p.footnote {
-              filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=50);
-              opacity: 0.8;
-              color: #ffffff;
-              margin-bottom: 0
-          }
-
-          @media screen and (min-width: 800px){
-
-              #news-signup .wrapper {
-                  width: 800px;
-                  margin: 7% auto;
-              }
-              #news-signup .newsletter-content form .button input {
-                  width: auto;
-                  margin: 0
-              }
-              #news-signup .newsletter-content form .button {
-                  float: left;
-                  width: auto;
-                  margin-left: 15px;
-              }
-              #news-signup .newsletter-content form {
-                  width: auto
-              }
-              #news-signup .newsletter-content form p {
-                  margin: 0 auto 15px
-              }
-              #news-signup .newsletter-content form p:not(.button) {
-                  float: left;
-                  width: auto
-              }
-              .newsletter-content form p:not(.button) input {
-                  width: 300px!important;
-                  margin: 0 15px 0 0
-              }
-          }
-</style>
-
-<script>
-    window.bioEp = {
-            // Private variables
-            bgEl: {},
-            popupEl: {},
-            closeBtnEl: {},
-            shown: false,
-            overflowDefault: "visible",
-
-            // Popup options
-            html: "",
-            css: "",
-            fonts: [],
-            delay: 2,
-            showOnDelay: false,
-            cookieExp: 30,
-
-            // Object for handling cookies, taken from QuirksMode
-            // https://www.quirksmode.org/js/cookies.html
-            cookieManager: {
-                // Create a cookie
-                create: function (name, value, days) {
-                    var expires = "";
-
-                    if (days) {
-                        var date = new Date();
-                        date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
-                        expires = "; expires=" + date.toGMTString();
-                    }
-
-                    document.cookie = name + "=" + value + expires + "; path=/";
-                },
-
-                // Get the value of a cookie
-                get: function (name) {
-                    var nameEQ = name + "=";
-                    var ca = document.cookie.split(";");
-
-                    for (var i = 0; i < ca.length; i++) {
-                        var c = ca[i];
-                        while (c.charAt(0) == " ") c = c.substring(1, c.length);
-                        if (c.indexOf(nameEQ) === 0) return c.substring(nameEQ.length, c.length);
-                    }
-
-                    return null;
-                },
-
-                // Delete a cookie
-                erase: function (name) {
-                    this.create(name, "", -1);
-                }
-            },
-
-            // Handle the bioep_shown cookie
-            // If present and true, return true
-            // If not present or false, create and return false
-            checkCookie: function () {
-                // Handle cookie reset
-                if (this.cookieExp <= 0) {
-                    this.cookieManager.erase("bioep_shown");
-                    return false;
-                }
-
-                // If cookie is set to true
-                if (this.cookieManager.get("bioep_shown") == "true")
-                    return true;
-
-                // Otherwise, create the cookie and return false
-                this.cookieManager.create("bioep_shown", "true", this.cookieExp);
-
-                return false;
-            },
-
-            // Add font stylesheets and CSS for the popup
-            addCSS: function () {
-                // Add font stylesheets
-                for (var i = 0; i < this.fonts.length; i++) {
-                    var font = document.createElement("link");
-                    font.href = this.fonts[i];
-                    font.type = "text/css";
-                    font.rel = "stylesheet";
-                    font.rel = "stylesheet";
-                    document.head.appendChild(font);
-                }
-
-            },
-
-            // Add the popup to the page
-            addPopup: function () {
-                // Add the background div
-                this.bgEl = document.createElement("div");
-                this.bgEl.id = "news-signup_bg";
-                document.body.appendChild(this.bgEl);
-
-                // Add the popup
-                if (document.getElementById("news-signup"))
-                    this.popupEl = document.getElementById("news-signup");
-                else {
-                    this.popupEl = document.createElement("div");
-                    this.popupEl.id = "news-signup";
-                    this.popupEl.innerHTML = this.html;
-                    document.body.appendChild(this.popupEl);
-                }
-            },
-
-            // Show the popup
-            showPopup: function () {
-                if (this.shown) return;
-
-                this.bgEl.style.visibility = "visible";
-                this.popupEl.style.visibility = "visible";
-                this.popupEl.style.opacity = "1";
-                this.popupEl.style.transform = "scale(1)";
-                this.popupEl.style.webkitTransform = "scale(1)";
-                this.popupEl.style.transition = "0.4s, opacity 0.4s";
-                this.popupEl.style.webkitTransform = "0.4s, opacity 0.4s";
-
-                // Save body overflow value and hide scrollbars
-                this.overflowDefault = document.body.style.overflow;
-                document.body.style.overflow = "hidden";
-
-                this.shown = true;
-            },
-
-            // Hide the popup
-            hidePopup: function () {
-                this.bgEl.style.visibility = "hidden";
-                this.popupEl.style.visibility = "hidden";
-                this.popupEl.style.opacity = "0";
-                this.popupEl.style.transform = "scale(0.5)";
-                this.popupEl.style.webkitTransform = "scale(0.5)";
-                this.popupEl.style.transition = "0.2s, opacity 0.2s, visibility 0s 0.2s";
-                this.popupEl.style.webkitTransform = "0.2s, opacity 0.2s, visibility 0s 0.2s";
-                document.body.style.overflow = this.overflowDefault;
-            },
-
-            // Event listener initialisation for all browsers
-            addEvent: function (obj, event, callback) {
-                if (obj.addEventListener)
-                    obj.addEventListener(event, callback, false);
-                else if (obj.attachEvent)
-                    obj.attachEvent("on" + event, callback);
-            },
-
-            // Load event listeners for the popup
-            loadEvents: function () {
-                // Track mouseout event on document
-                this.addEvent(document, "mouseout", function (e) {
-                    e = e ? e : window.event;
-                    var from = e.relatedTarget || e.toElement;
-
-                    // Reliable, works on mouse exiting window and user switching active program
-                    if (!from || from.nodeName === "HTML")
-                        bioEp.showPopup();
-                });
-
-                // Handle the popup close button
-                this.closebtn = document.getElementById("news-signup_close");
-                this.addEvent(this.closebtn, "click", function () {
-                    bioEp.hidePopup();
-                });
-            },
-
-            // Set user defined options for the popup
-            setOptions: function (opts) {
-                this.html = (typeof opts.html === 'undefined') ? this.html : opts.html;
-                this.css = (typeof opts.css === 'undefined') ? this.css : opts.css;
-                this.fonts = (typeof opts.fonts === 'undefined') ? this.fonts : opts.fonts;
-                this.delay = (typeof opts.delay === 'undefined') ? this.delay : opts.delay;
-                this.showOnDelay = (typeof opts.showOnDelay === 'undefined') ? this.showOnDelay : opts.showOnDelay;
-                this.cookieExp = (typeof opts.cookieExp === 'undefined') ? this.cookieExp : opts.cookieExp;
-            },
-
-            // Ensure the DOM has loaded
-            domReady: function (callback) {
-                (document.readyState === "interactive" || document.readyState === "complete") ? callback() : this.addEvent(document, "DOMContentLoaded", callback);
-            },
-
-            // Initialize
-            init: function (opts) {
-                // Handle options
-                if (typeof opts !== 'undefined')
-                    this.setOptions(opts);
-
-                // Add CSS here to make sure user HTML is hidden regardless of cookie
-                this.addCSS();
-
-                // Once the DOM has fully loaded
-                this.domReady(function () {
-                    // Handle the cookie
-                    if (bioEp.checkCookie()) return;
-
-                    // Add the popup
-                    bioEp.addPopup();
-
-                    // Load events
-                    setTimeout(function () {
-                        bioEp.loadEvents();
-
-                        if (bioEp.showOnDelay)
-                            bioEp.showPopup();
-                    }, bioEp.delay * 1000);
-                });
-            }
-        }
-
-        window.onload = function () {
-            document.getElementById("signup-form").focus();
-        };
-
-        bioEp.init({
-            cookieExp: 0
-        });
-
-
-
-        $(document).ready(function () {
-            var h = new Image();
-            h.src = waitImage;
-            $("#signup-form").submit(function () {
-                var d = $("#news_signup_email").val();
-                var e = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/;
-                var f = this.action;
-                ajaxaddress = f.replace(/subscribe/, 'asubscribe');
-                $('#signup-form').html('<img src="' + h.src + '" width="' + h.width + '" height="' + h.height + '" border="0" alt="Please wait" title="hacker9 newsletter" />');
-                if (e.test(d)) {
-                    var g = $.ajax({
-                        type: 'POST',
-                        url: ajaxaddress,
-                        crossDomain: true,
-                        data: "email=" + d,
-                        success: function (a, b, c) {
-                            if (a.search(/FAIL/) >= 0) {
-                                document.location = f + "&email=" + d
-                            } else {
-                                $('#phplistsubscriberesult').html("<div id='subscribemessage'></div>");
-                                $('#subscribemessage').html(a).hide().fadeIn(1500);
-                                $("#signup-form").hide();
-                                document.cookie = "phplistsubscribed=yes"
-                            }
-                        },
-                        error: function (a, b, c) {
-                            document.location = f + "&email=" + d
-                        }
-                    })
-                } else {
-                    document.location = f + "&email=" + d
-                }
-                return false
-            });
-            $("#news_signup_email").val(pleaseEnter);
-            $("#news_signup_email").focus(function () {
-                var v = $("#news_signup_email").val();
-                if (v == pleaseEnter) {
-                    $("#news_signup_email").val("")
-                }
-            });
-            $("#news_signup_email").blur(function () {
-                var v = $("#news_signup_email").val();
-                if (v == "") {
-                    $("#emailaddress").val(pleaseEnter)
-                }
-            });
-            var i = document.cookie;
-            if (i.indexOf('phplistsubscribed=yes') >= 0) {
-                $("#signup-form").html(thanksForSubscribing)
-            }
-        });
-        $.ajaxTransport("+*", function (d, e, f) {
-            if (jQuery.browser.msie && window.XDomainRequest) {
-                var g;
-                return {
-                    send: function (b, c) {
-                        g = new XDomainRequest();
-                        g.open("get", d.url + "&" + d.data);
-                        g.onload = function () {
-                            if (this.contentType.match(/\/xml/)) {
-                                var a = new ActiveXObject("Microsoft.XMLDOM");
-                                a.async = false;
-                                a.loadXML(this.responseText);
-                                c(200, "success", [a])
-                            } else {
-                                c(200, "success", [this.responseText])
-                            }
-                        };
-                        g.ontimeout = function () {
-                            c(408, "error", ["The request timed out."])
-                        };
-                        g.onerror = function () {
-                            c(404, "error", ["The requested resource could not be found."])
-                        };
-                        g.send()
-                    },
-                    abort: function () {
-                        if (g) g.abort()
-                    }
-                }
-            }
-        });
-        if (pleaseEnter == undefined) {
-            var pleaseEnter = "Enter your email"
-        }
-        if (thanksForSubscribing == undefined) {
-            var thanksForSubscribing = '<div class="subscribed">Thanks for subscribing. Please click the link in the confirmation email you will receive.</div>'
-        }
-        if (waitImage == undefined) {
-            var waitImage = 'https://s3.amazonaws.com/phplist/img/busy.gif'
-        }
-</script>
